Commit du cmake avec lexer qui fonctionne et correction de dynarray et bloc

--- a/src/calc_lib/CMakeLists.txt
+++ b/src/calc_lib/CMakeLists.txt
@@ -4,6 +4,12 @@ add_library(${target_name} STATIC "")
 target_sources(${target_name}
 PRIVATE
 "${PROJECT_SOURCE_DIR}/src/calc_lib/lexer.cpp"
+"${PROJECT_SOURCE_DIR}/src/calc_lib/bloc.cpp"
+#"${PROJECT_SOURCE_DIR}/src/calc_lib/DynArray.cpp"
+PRIVATE
+"${PROJECT_SOURCE_DIR}/include/calc_lib/lexer.h"
+"${PROJECT_SOURCE_DIR}/include/calc_lib/bloc.h"
+"${PROJECT_SOURCE_DIR}/include/calc_lib/DynArray.h"
 )
 
 target_include_directories(${target_name}
