--- a/mains/CMakeLists.txt
+++ b/mains/CMakeLists.txt
@@ -1,4 +1,4 @@
 #add the executable
 
-add_executable(main_calculette main.cpp)
-target_link_libraries(main_calculette PRIVATE calclib)
+add_executable(CalculetteProject main.cpp)
+target_link_libraries(CalculetteProject PRIVATE calclib)
