ajout d'un test du lexer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,14 @@ add_subdirectory(src/calc_lib)
 #about executable
 option(CalculetteProject_WITH_EXECUTABLES "Compile mains" OFF)
 if(CalculetteProject_WITH_EXECUTABLES)
-	#enable testing with CTest
 	message(STATUS "Configuring CalculetteProject with executables")
 	add_subdirectory(mains)
 endif()
 
 
-#option(CalculetteProject_WITH_TESTS "Compile test projects" OFF)
-#if(CalculetteProject_WITH_TESTS)
-#enable_testing()
-#message(STATUS "Configuring CalculetteProjectwithtests")
-#add_subdirectory(tests)
-#endif()
+option(CalculetteProject_WITH_TESTS "Compile test projects" OFF)
+if(CalculetteProject_WITH_TESTS)
+	enable_testing()
+	message(STATUS "Configuring CalculetteProjectwithtests")
+	add_subdirectory(tests)
+endif()
