--- a/src/calc_lib/CMakeLists.txt
+++ b/src/calc_lib/CMakeLists.txt
@@ -5,11 +5,14 @@ target_sources(${target_name}
 PRIVATE
 "${PROJECT_SOURCE_DIR}/src/calc_lib/lexer.cpp"
 "${PROJECT_SOURCE_DIR}/src/calc_lib/bloc.cpp"
+"${PROJECT_SOURCE_DIR}/src/calc_lib/checker.cpp"
 #"${PROJECT_SOURCE_DIR}/src/calc_lib/DynArray.cpp"
 PRIVATE
 "${PROJECT_SOURCE_DIR}/include/calc_lib/lexer.h"
 "${PROJECT_SOURCE_DIR}/include/calc_lib/bloc.h"
+"${PROJECT_SOURCE_DIR}/include/calc_lib/checker.h"
 "${PROJECT_SOURCE_DIR}/include/calc_lib/DynArray.h"
+
 )
 
 target_include_directories(${target_name}
