--- a/src/calc_lib/CMakeLists.txt
+++ b/src/calc_lib/CMakeLists.txt
@@ -5,10 +5,12 @@ target_sources(${target_name}
 PRIVATE
 "${PROJECT_SOURCE_DIR}/src/calc_lib/lexer.cpp"
 "${PROJECT_SOURCE_DIR}/src/calc_lib/bloc.cpp"
+"${PROJECT_SOURCE_DIR}/src/calc_lib/parser.cpp"
 PRIVATE
 "${PROJECT_SOURCE_DIR}/include/calc_lib/lexer.h"
 "${PROJECT_SOURCE_DIR}/include/calc_lib/bloc.h"
 "${PROJECT_SOURCE_DIR}/include/calc_lib/DynArray.h"
+"${PROJECT_SOURCE_DIR}/include/calc_lib/parser.h"
 )
 
 target_include_directories(${target_name}
