--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,3 +7,7 @@ endif()
 add_executable(test_lexer test_lexer.cpp)
 target_link_libraries(test_lexer PUBLIC calclib)
 add_test(NAME test_lexer COMMAND test_lexer)
+
+add_executable(test_parser test_parser.cpp)
+target_link_libraries(test_parser PUBLIC calclib)
+add_test(NAME test_parser COMMAND test_parser)
