add functional evaluator

--- a/src/calc_lib/CMakeLists.txt
+++ b/src/calc_lib/CMakeLists.txt
@@ -6,11 +6,13 @@ PRIVATE
 "${PROJECT_SOURCE_DIR}/src/calc_lib/lexer.cpp"
 "${PROJECT_SOURCE_DIR}/src/calc_lib/bloc.cpp"
 "${PROJECT_SOURCE_DIR}/src/calc_lib/parser.cpp"
+"${PROJECT_SOURCE_DIR}/src/calc_lib/evaluator.cpp"
 PRIVATE
 "${PROJECT_SOURCE_DIR}/include/calc_lib/lexer.h"
 "${PROJECT_SOURCE_DIR}/include/calc_lib/bloc.h"
 "${PROJECT_SOURCE_DIR}/include/calc_lib/DynArray.h"
 "${PROJECT_SOURCE_DIR}/include/calc_lib/parser.h"
+"${PROJECT_SOURCE_DIR}/include/calc_lib/evaluator.h"
 )
 
 target_include_directories(${target_name}
