--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,10 @@ if(NOT TARGET calclib)
   enable_testing()
 endif()
 
+add_executable(test_checker test_checker.cpp)
+target_link_libraries(test_checker PUBLIC calclib)
+add_test(NAME test_checker COMMAND test_checker)
+
 add_executable(test_lexer test_lexer.cpp)
 target_link_libraries(test_lexer PUBLIC calclib)
 add_test(NAME test_lexer COMMAND test_lexer)
