--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,9 +11,9 @@ env:
   BUILD_TYPE: Debug
 
 jobs:
-  reformat:
+  autoformat_job:
     runs-on: ubuntu-latest
-    name: auto-reformat
+    name: Automatic formatting
     steps:
       - name: Checkout
         uses: action/checkout@v2
@@ -32,7 +32,7 @@ jobs:
           git commit -am "Autoformat"
           git push
   build_and_test:
-    needs: auto-reformat
+    needs: autoformat_job
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
